--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ return BuildHTML(tp,{
 <div>
 	<input type="button" onclick="test2()" value="执行">
 	loop:<input type="text" class="t2loop" value="1000">
-	cache:<input type="checkbox" class="t2cache">
+	cache:<input type="checkbox" class="t2cache" checked>
 </div>
 <div>结果：<span class="d2loop"></span></div>
 <textarea class="d2" style="width:80%;height:300px"></textarea>
